test/valid/string.art
fn test() {
    let _ = "abc
    ";
}
