test/invalid/unreachable.art
fn test1() -> () {
    return();
    ()
}
/*
fn test2() -> () {
    return();
    let _ = 1;
    ()
}*/
